option('build-debug-overlay',
	type : 'boolean',
	value : false)
option('build-tests',
	type : 'boolean',
	value : true)

option('use-backend-cairo',
	type : 'feature',
	value : 'disabled')
option('use-backend-nanovg',
	type : 'feature',
	value : 'enabled')

option('use-frontend-pugl',
	type : 'feature',
	value : 'enabled')

option('use-fontconfig',
	type : 'feature',
	value : 'disabled')

option('build-opengl-ui',
	type : 'boolean',
	value : true)

option('build-next-ui',
	type : 'boolean',
	value : false)

option('build-inline-disp',
	type : 'boolean',
	value : false)

option('gc-method',
	type : 'string',
	value : 'generational')

option('lv2libdir',
	type : 'string',
	value : 'lib/lv2')
